chat 완성본...야호야호

--- a/silhouetteGameSwing/.settings/org.eclipse.core.resources.prefs
+++ b/silhouetteGameSwing/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/application/GameClient.java=UTF-8
+encoding//src/application/gameUser.java=UTF-8
 encoding/<project>=MS949
