--- a/silhouetteGameSwing/.settings/org.eclipse.core.resources.prefs
+++ b/silhouetteGameSwing/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/application=MS949
+encoding//src/application/GameClient.java=UTF-8
 encoding/<project>=UTF-8
